--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col-xs-12 col-sm-4">
       <button
-        ng-click="luoKilpailutus()"
+        ng-click="newKilpailutus()"
         class="btn btn-success btn-lg pull-right"
         style="margin-top: 20px; margin-bottom: 10px;">
         Lisää kilpailutus
