--- a/app/scripts/views/kilpailutukset/kilpailutus.html
+++ b/app/scripts/views/kilpailutukset/kilpailutus.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<h1>Liikennöintisopimuksen / uuden kilpailutuksen tiedot</h1>
+	<h1>Liikennöintisopimuksen / kilpailutuksen tiedot</h1>
   <ng-form name="kilpailutusForm">
   	<h3>Kohde</h3>
 		<div class="row">
@@ -173,8 +173,8 @@
   <juku-controls>
     <juku-controls-buttons class="full-width">
       <button
-      	juku-liikennointisopimuksen-tai-kilpailutuksen-poistodialogi
-      	data-ng-click="remove()" class="btn btn-danger Ms-0 pull-left">Poista liikennöintitieto</button>
+      	juku-kilpailutus-poistodialogi
+        class="btn btn-danger Ms-0 pull-left">Poista kilpailutus</button>
 
       <button data-ng-click="save()" class="btn btn-success pull-right">Tallenna ja sulje lomake</button>
       <button data-ng-click="cancel()" class="btn btn-warning pull-right">Sulje lomake</button>
