LIVIJUKU-841 - nimien päivityksiä

--- a/app/scripts/views/kilpailutukset/kilpailutus.html
+++ b/app/scripts/views/kilpailutukset/kilpailutus.html
@@ -126,7 +126,7 @@
 	      </form-group>
       </div>
     </div>
-   	<h3>Tietoa tarjouksista</h3>
+   	<h3>Tietoa kilpailutuksesta</h3>
     <div class="row">
     	<div class="col-md-9">
 		   	<form-group label="Valittu liikennöitsijä">
