--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -2,6 +2,7 @@
 
 @import '../../node_modules/bootstrap/dist/css/bootstrap.min.css'
 @import '../../node_modules/angular-toastr/dist/angular-toastr.css'
+@import '../../node_modules/angularjs-slider/dist/rzslider.css'
 @import '_variables'
 @import '_components'
 
