--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -8,34 +8,48 @@
         ng-click="newKilpailutus()"
         class="btn btn-success btn-lg pull-right"
         style="margin-top: 20px; margin-bottom: 10px;">
-        Lisää kilpailutus
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Lisää uusi kilpailutus
       </button>
     </div>
   </div>
 
   <form style="margin-bottom: 2em;">
   	<div class="row">
-  		<div class="col-xs-12 col-sm-6 col-md-3">
-		  	<form-group label="Toimivaltainen viranomainen">
-  		  	<ol id="organisaatio" ng-model="organisaatioId" ng-disabled="isReadonly()"
-          	title="Näytä kaikki" class="form-control nya-bs-select" size="20" multiple style="z-index: 10;">
-           	<li nya-bs-option="organisaatio in organisaatiot" data-value="organisaatio.id">
-            	<a>{{ organisaatio.nimi }}</a>
-            </li>
-          </ol>
-        </form-group>
-		  </div>
+	  	<form-group label="Toimivaltainen viranomainen" class="col-xs-12 col-sm-6 col-md-4">
+		  	<ol id="organisaatio" ng-model="organisaatioId" ng-disabled="isReadonly()"
+        	title="Näytä kaikki" class="form-control nya-bs-select" size="20" multiple style="z-index: 10;">
+         	<li nya-bs-option="organisaatio in organisaatiot" data-value="organisaatio.id">
+          	<a>{{ organisaatio.nimi }}</a>
+          </li>
+        </ol>
+      </form-group>
+      <form-group label="Toimivalta-alue" class="col-xs-12 col-sm-6 col-md-4">
+        <ol id="organisaatiolajitunnus" ng-model="organisaatioId" ng-disabled="isReadonly()"
+          title="Näytä kaikki" class="form-control nya-bs-select" size="20" multiple style="z-index: 10;">
+          <li nya-bs-option="lajitunnus in organisaatiolajit.$order" data-value="lajitunnus">
+            <a>{{ organisaatiolajit.$nimi(lajitunnus) }}</a>
+          </li>
+        </ol>
+      </form-group>
+      <form-group label="Kilpailutusalue" class="col-xs-12 col-sm-6 col-md-4">
+        <ol id="organisaatio" ng-model="organisaatioId" ng-disabled="isReadonly()"
+          title="Näytä kaikki" class="form-control nya-bs-select" size="20" multiple style="z-index: 10;">
+          <li nya-bs-option="organisaatio in organisaatiot" data-value="organisaatio.id">
+            <a>{{ organisaatio.nimi }}</a>
+          </li>
+        </ol>
+      </form-group>
 		</div>
 
     <div class="row">
-      <div class="form-group col-xs-12 col-sm-6 col-md-3">
+      <div class="form-group col-xs-12 col-sm-6 col-md-4">
         <label for="kohdearvo">Kohteen arvioitu arvo (€)</label>
         <rzslider id="kohdearvo"
              rz-slider-model="kohdearvo.min"
              rz-slider-high="kohdearvo.max"
              rz-slider-options="kohdearvo.options"></rzslider>
       </div>
-      <div class="form-group col-xs-12 col-sm-6 col-md-3">
+      <div class="form-group col-xs-12 col-sm-6 col-md-4">
         <label for="kalustokoko">Kaluston määrä (kpl)</label>
         <rzslider id="kalustokoko"
              rz-slider-model="kalustokoko.min"
@@ -43,7 +57,7 @@
              rz-slider-options="kalustokoko.options"></rzslider>
       </div>
 
-      <div class="form-group col-xs-12 col-sm-6 col-md-6">
+      <div class="form-group col-xs-12 col-sm-6 col-md-4">
         <label>Aikajanalla näytettävä ajanjakso</label>
         <div class="checkbox">
           <label class="checkbox-inline">
@@ -57,7 +71,7 @@
     </div>
   </form>
 
-  <div class="row">
+  <div class="row" style="margin-top: 5em;">
     <div class="col-xs-12" style="padding-bottom: 1em;">
       <div style="float: left; width: 220px;">
         <div style="width: 20px; height: 20px; background-color: #2479B2; float: left;">
