LIVIJUKU-836 - kilpailutuksen poistonappula ei ole näkyvissä jos kyseessä on uusi kilpailutus

--- a/app/scripts/views/kilpailutukset/kilpailutus.html
+++ b/app/scripts/views/kilpailutukset/kilpailutus.html
@@ -172,7 +172,7 @@
 
   <juku-controls>
     <juku-controls-buttons class="full-width">
-      <button
+      <button ng-show="!isNew"
       	juku-kilpailutus-poistodialogi
         class="btn btn-danger Ms-0 pull-left">Poista kilpailutus</button>
 
