LIVIJUKU-830 - uudet värit - TODO: tyylitiedot pitäisi siirtää css:ään

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -71,39 +71,43 @@
     </div>
   </form>
 
-  <div class="row" style="margin-top: 5em;">
-    <div class="col-xs-12" style="padding-bottom: 1em;">
-      <div style="float: left; width: 220px;">
-        <div style="width: 20px; height: 20px; background-color: #2479B2; float: left;">
+  <div class="row" style="margin-top: 5em; padding-bottom: 1em;">
+      <div class="col-md-2">
+        <div style="width: 20px; height: 20px; background-color: #3385D6; float: left;">
           &nbsp;
         </div>
-        <div style="margin-left: 2em;">= Tarjousaika</div>
+        <div style="margin-left: 2em;">Tarjousaika</div>
       </div>
-      <div style="float: left; width: 220px;">
-        <div style="width: 20px; height: 20px; background-color: #35ACFF; float: left;">
+      <div class="col-md-2">
+        <div style="width: 20px; height: 20px; background-color: #C266EB; float: left;">
           &nbsp;
         </div>
-        <div style="margin-left: 2em;">= Tarjousten käsittely ja hankintapäätös</div>
+        <div style="margin-left: 2em;"> Tarjousten käsittely ja hankintapäätös</div>
       </div>
-      <div style="float: left; width: 220px;">
-        <div style="width: 20px; height: 20px; background-color: #B27215; float: left;">
+      <div class="col-md-2">
+        <div style="width: 20px; height: 20px; background-color: #FFA033; float: left;">
           &nbsp;
         </div>
-        <div style="margin-left: 2em;">= Liikennöinnin valmistelu</div>
+        <div style="margin-left: 2em;"> Liikennöinnin valmistelu</div>
       </div>
-      <div style="float: left; width: 220px;">
-        <div style="width: 20px; height: 20px; background-color: #FFA829; float: left;">
+      <div class="col-md-2">
+        <div style="width: 20px; height: 20px; background-color: #33BB33; float: left;">
           &nbsp;
         </div>
-        <div style="margin-left: 2em;">= Liikennöinti (sopimuskausi)</div>
+        <div style="margin-left: 2em;"> Liikennöinti (sopimuskausi)</div>
       </div>
-      <div style="float: left; width: 220px;">
-        <div style="width: 20px; height: 20px; background-color: red; float: left;">
+      <div class="col-md-2">
+        <div style="width: 20px; height: 20px; background-color: #66CCD6; float: left;">
           &nbsp;
         </div>
-        <div style="margin-left: 2em;">= Liikennöinti (optiokausi)</div>
+        <div style="margin-left: 2em;"> Hankitut optiot</div>
       </div>
-    </div>
+      <div class="col-md-2">
+        <div style="width: 20px; height: 20px; background-color: #cfeff2; border: 1px dashed #66CCD6; float: left;">
+          &nbsp;
+        </div>
+        <div style="margin-left: 2em;"> Optiot</div>
+      </div>
   </div>
   <timeline
   	organisaatiot="organisaatiot"
