LIVIJUKU-824 - aikajanassa hankittuoptiopaattymispvm = liikennointipaattymispvm, jos hankittuoptiopaattymispvm == null - kilapilutusnäytön otsikko - aikajananäytön otsikko muutettu bootstrap-tyylisemmäksi

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -1,17 +1,16 @@
 <div class="container">
-  <div class="row page-header">
-    <div class="col-xs-12 col-sm-8">
-      <h1 style="margin-bottom: 0; margin-top: 25px;">Kilpailutukset</h1>
+
+    <div class="page-header">
+
+        <h1 class="Mb-sm">Kilpailutukset
+        <button
+          ng-click="newKilpailutus()"
+          class="btn btn-success btn-lg pull-right">
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Lisää uusi kilpailutus
+        </button>
+        </h1>
     </div>
-    <div class="col-xs-12 col-sm-4">
-      <button
-        ng-click="newKilpailutus()"
-        class="btn btn-success btn-lg pull-right"
-        style="margin-top: 20px; margin-bottom: 10px;">
-        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Lisää uusi kilpailutus
-      </button>
-    </div>
-  </div>
+
 
   <form style="margin-bottom: 2em;">
   	<div class="row">
@@ -106,7 +105,7 @@
         <div style="width: 20px; height: 20px; background-color: #cfeff2; border: 1px dashed #66CCD6; float: left;">
           &nbsp;
         </div>
-        <div style="margin-left: 2em;"> Optiot</div>
+        <div style="margin-left: 2em;"> Optiot kokonaisuudessaan</div>
       </div>
   </div>
   <timeline
