--- a/app/scripts/views/kilpailutukset/kilpailutus.html
+++ b/app/scripts/views/kilpailutukset/kilpailutus.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<h1>Liikennöintisopimuksen / kilpailutuksen tiedot</h1>
+	<h1>Kilpailutuksen (tai liikennöintisopimuksen) tiedot</h1>
   <ng-form name="kilpailutusForm">
   	<h3>Kohde</h3>
 		<div class="row">
