--- a/app/scripts/views/kilpailutukset/kilpailutus.html
+++ b/app/scripts/views/kilpailutukset/kilpailutus.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<h1>Kilpailutuksen (tai liikennöintisopimuksen) tiedot</h1>
-  <ng-form name="kilpailutusForm">
+  <ng-form name="kilpailutusForm" focus-to-invalid juku-poistumisvaroitus>
   	<h3>Kohde</h3>
 		<div class="row">
 			<div class="col-md-6">
