--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -3,6 +3,8 @@
 @import '../../node_modules/bootstrap/dist/css/bootstrap.min.css'
 @import '../../node_modules/angular-toastr/dist/angular-toastr.css'
 @import '../../node_modules/angularjs-slider/dist/rzslider.css'
+@import '../../node_modules/ng-tags-input/build/ng-tags-input.css'
+@import '../../node_modules/ng-tags-input/build/ng-tags-input.bootstrap.css'
 @import '_variables'
 @import '_components'
 
@@ -375,5 +377,5 @@ textarea
 .Mb-sm
   margin-bottom: 0.5em
 
-.Mb-md
+.Mt-md
   margin-top: 1em
