LIVIJUKU-835 - kohdearvo + kalusto suodatus

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -123,7 +123,7 @@
   </div>
   <timeline
   	organisaatiot="timeline.organisaatiot"
-  	kilpailutukset="kilpailutukset"
+  	kilpailutukset="timeline.kilpailutukset"
   	options="timeline.options"
   	events="timeline.events">
   </timeline>
