LIVIJUKU-837 - kilpailutuksen poistaminen

--- a/app/scripts/views/kilpailutukset/kilpailutus.html
+++ b/app/scripts/views/kilpailutukset/kilpailutus.html
@@ -184,7 +184,7 @@
   <juku-controls>
     <juku-controls-buttons class="full-width">
       <button ng-show="!isNew"
-      	juku-kilpailutus-poistodialogi
+      	juku-kilpailutus-poistodialogi kilpailutusid="kilpailutus.id"
         class="btn btn-danger Ms-0 pull-left">Poista kilpailutus</button>
 
       <button data-ng-click="save()" class="btn btn-success pull-right">Tallenna ja sulje lomake</button>
