LIVIJUKU-845 - aikajanalla näytettävän ajanjakson valinnan toteutus - tämä toteutus aiheuttaa datan latauksen uudestaan - parrempi vaihtoehto voisi tässäkin olla että dataa ei ladata.

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -73,10 +73,10 @@
         <label>Aikajanalla näytettävä ajanjakso</label>
         <div class="checkbox">
           <label class="checkbox-inline">
-            <input type="checkbox" id="kilpailutuskausi"> Kilpailutuskausi
+            <input type="checkbox" id="kilpailutuskausi" name="kilpailutuskausi" ng-model="kilpailutuskausi"> Kilpailutuskausi
           </label>
           <label class="checkbox-inline">
-            <input type="checkbox" id="liikennointikausi"> Liikennöintikausi
+            <input type="checkbox" id="liikennointikausi" name="liikennointikausi" ng-model="liikennointikausi"> Liikennöintikausi
           </label>
         </div>
       </div>
