LIVIJUKU-822 - piiloitetaan kilpailutusalue toistaiseksi - voi olla että nykyiset suodatukset ovat riittävät

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -14,7 +14,7 @@
 
   <form style="margin-bottom: 2em;">
   	<div class="row">
-	  	<form-group label="Toimivaltainen viranomainen" class="col-xs-12 col-sm-6 col-md-4">
+	  	<form-group label="Toimivaltainen viranomainen" class="col-xs-12 col-sm-6 col-md-6">
         <tags-input id="organisaatio-filter" name="organisaatio-filter"
                     placeholder="Suodata aikajanaa valitsemalla viranomaisia"
                     ng-model="filter.organisaatiot" add-from-autocomplete-only="true"
@@ -25,7 +25,7 @@
         </tags-input>
       </form-group>
 
-      <form-group label="Toimivaltaryhmä" class="col-xs-12 col-sm-6 col-md-4">
+      <form-group label="Toimivaltaryhmä" class="col-xs-12 col-sm-6 col-md-6">
         <tags-input id="organisaatiolaji-filter" name="organisaatiolaji-filter"
                     placeholder="Suodata aikajanaa valitsemalla toimivaltaryhmiä"
                     ng-model="filter.organisaatiolajit"  add-from-autocomplete-only="true"
@@ -41,7 +41,7 @@
           </li>
         </ol-->
       </form-group>
-      <form-group label="Kilpailutusalue" class="col-xs-12 col-sm-6 col-md-4">
+      <!--form-group label="Kilpailutusalue" class="col-xs-12 col-sm-6 col-md-4">
         <tags-input id="kilpailutusalue-filter" name="kilpailutusalue-filter"
                     placeholder="Suodata aikajanaa valitsemalla kilpailutusryhmiä"
                     ng-model="kilpailutusalueFilter" add-from-autocomplete-only="true"
@@ -50,7 +50,7 @@
                          load-on-focus="true" load-on-empty="true">
           </auto-complete>
         </tags-input>
-      </form-group>
+      </form-group-->
 		</div>
 
     <div class="row">
