--- a/app/scripts/components/formInput/input.html
+++ b/app/scripts/components/formInput/input.html
@@ -4,8 +4,11 @@
 
   <ng-transclude></ng-transclude>
 
-  <span ng-show="input().$invalid && input().$touched && feedbackSupport"
+  <span ng-show="inputModel().$invalid && inputModel().$touched && feedbackSupport"
         class="glyphicon glyphicon-warning-sign form-control-feedback"
         aria-hidden="true"></span>
-  <p class="help-block ng-invalid" ng-show="input().$invalid && input().$touched">{{tooltipText()}}</p>
+  <p class="help-block ng-invalid" ng-show="inputModel().$invalid && inputModel().$touched">
+    <span ng-show="tooltipText() && !feedbackSupport" class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+    {{tooltipText()}}
+  </p>
 </div>
